# pytest-CircleiCI

./: .gitignore  .hadolint.yaml  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
dev-template/: .gitignore  pyproject.toml  pytest.ini
dev-template/doc/: poetry_setting.md  pyenv_sertting.md
dev-template/src/: CRUD.py  four_basic_arithmetic_operations.py  mysql_connect_sample.py
dev-template/tests/: test_CRUD.py  test_dev_template.py  test_four_basic_arithmetic_operations.py
doc/: circleci_setting.md  linter_formatter_sertting.md  mysql_setting.md  poetry_setting.md  pyenv_sertting.md  pytest_setting.md  static_type_checker.md
mysql/: .gitignore  Dockerfile
mysql/docker/mysql/conf.d/: my.cnf
