[tool.poetry]
name = "dev-template"
version = "0.1.0"
description = ""
authors = ["arrowkato"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.8.3"
yapf = "^0.30.0"
mysql-connector-python = "^8.0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
